yoshimi 1.3.x

2016-5-13 Will
- Identifed Resonance controls.
- Moved max resonance points definition to CMakeLists.txt
  and changed to more obvious name. In future we want to check
  this size outside immediate resonance code.

2016-5-12 Will
- Identified AddSynth & PadSynth oscillator controls.
- Included Adsynth Voice & Modulator controls.

2016-5-11 Will
- Improved SubSynth ID code.
- Corrected swapped controls in filters.
- Identifed AddSynth global controls.
- Identifed PadSynth controls.

2016-5-10 Will
- All of SubSynth identified (except embedded envelopes).

2016-5-9 Will
- Bugfix: Different versions of CMake require different ways of
  specifying C++11

2016-5-8 Will
- Filter params complete.
- Small improvement to the way we return control values.

2016-5-7 Will
- Yoshimi now requires C++11
- All parts of LFO now respond to test.
- Filter params mostly responding to test.

2016-5-6 Will
- Tests slightly improved and will now display in the GUI or CLI
  whichever is selected.

2016-5-5 Will
- Added GUI recognition tests (displayed in the CLI)
  Volume button on any Addsynth Voice
  Freq button on any LFO

2016-5-4 Will
- Bugfix: offset could be uninitialsed in history saving routine.

2016-5-3 Will
- Implemented setting jack autoconnect status in both GUI and CLI.

2016-5-1 Will
- Completed right click to and from resonance
- First-time startup now opens the virtual keyboard.
- Fixed master and part key shift range limits to +-36 semitones.
- Implemented master, part & channel NRPN key shift.

2016-4-30 Will
- Implemented right click on child window button closes parent
  and right click on child close button opens parent.
  To and from resonance yet to do.

2016-4-29 Will
- Bugfix: file not added to end of history list if copy had
  just gone over the maximium, so was still technically there
  but wouldn't have been saved.
- Reinstated missing XML instrument parameters, although never used.

2016-4-28 Will
- Implemented CLI read/get for vectors.