@@ -637,6 +637,8 @@ send_data(17, o->value());}
   }
   Function {send_data(int control, float value, bool isInteger = true)} {} {
     code {//
+synth->commandFetch(value, (Fl::event_button() | 0x20 | (isInteger << 7)), control, npart, kititem, engine, 2);
+
 if (Fl::event_button() != 2)
     return;
 
@@ -654,7 +656,7 @@ else if (engine == 2)
     name = "  SubSynth";
 else if (engine == 3)
     name = "  PadSynth";
-else if (engine == 16)
+else if (npart == 0xf0)
     name = "  Sys or Ins";
 else if (engine >= 0x80)
 name = "  Adsynth Voice ";
