@@ -410,6 +410,8 @@ cbwidget=NULL;} {}
   }
   Function {send_data(int insert, int control, float value, bool isInteger = true)} {} {
     code {//
+synth->commandFetch(value, (Fl::event_button() | 0x20 | (isInteger << 7)), control, npart, kititem, engine, insert);
+
 if (Fl::event_button() != 2)
     return;
 
@@ -1245,6 +1247,8 @@ send_data (97, o->value());}
   }
   Function {send_data(int control, float value, bool isInteger = true)} {} {
     code {//
+synth->commandFetch(value, (Fl::event_button() | 0x20 | (isInteger << 7)), control, npart, kititem, engine, 5);
+
 if (Fl::event_button() != 2)
     return;
 
